// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-1.1.x"]
}

model Persoon {
  id                  Int         @id @default(autoincrement())
  voornaam            String?     @db.VarChar(128)
  achternaam          String      @db.VarChar(128)
  volledigeNaam       String      @db.VarChar(256)
  emailadres          String?     @db.VarChar(256)
  verblijfadresId     Int
  verblijfadres       Adres       @relation(name: "verblijfadres", fields: [verblijfadresId], references: [id])
  domicilieadresId    Int?
  domicilieadres      Adres?      @relation(name: "domicilieadres", fields: [domicilieadresId], references: [id])
  geboortedatum       DateTime?   @db.Date
  geboorteplaats      String?     @db.VarChar(256)
  geslacht            Geslacht    @default(onbekend)
  rekeningnummer      String?     @db.VarChar(256)
  rijksregisternummer String?     @db.VarChar(256)
  telefoonnummer      String?     @db.VarChar(256)
  gsmNummer           String?     @db.VarChar(256)
  opmerking           String?     @db.VarChar(1024)
  type                PersoonType @default(deelnemer)

  // Deelnemer
  woonsituatie               Woonsituatie    @default(onbekend)
  woonsituatieOpmerking      String?
  werksituatie               Werksituatie    @default(onbekend)
  opleidingsvorm             Opleidingsvorm?
  werksituatieOpmerking      String?
  voedingswens               Voedingswens    @default(geen)
  voedingswensOpmerking      String?
  aanmeldingen               Aanmelding[]
  eersteCursusAanmelding     Aanmelding?     @relation("eersteCursusAanmelding", fields: [eersteCursusAanmeldingId], references: [id])
  eersteCursusAanmeldingId   Int?
  eersteVakantieAanmelding   Aanmelding?     @relation("eersteVakantieAanmelding", fields: [eersteVakantieAanmeldingId], references: [id])
  eersteVakantieAanmeldingId Int?

  // OverigePersonen
  foldervoorkeuren   Foldervoorkeur[]
  selectie           OverigPersoonSelectie[]
  begeleidtProjecten Project[]

  @@map("persoon")
}

model Adres {
  id         Int     @id @default(autoincrement())
  plaats     Plaats  @relation(fields: [plaatsId], references: [id])
  straatnaam String  @db.VarChar(64)
  huisnummer String  @db.VarChar(10)
  busnummer  String? @db.VarChar(10)
  plaatsId   Int

  verblijfpersonen     Persoon[]            @relation("verblijfadres")
  domiciliepersonen    Persoon[]            @relation("domicilieadres")
  organisatieContacten OrganisatieContact[]

  @@map("adres")
}

model Plaats {
  id            Int    @id @default(autoincrement())
  deelgemeente  String @db.VarChar(256)
  gemeente      String @db.VarChar(256)
  postcode      String @unique @db.VarChar(10)
  volledigeNaam String @db.VarChar(256)
  provincieId   Int

  Adressen     Adres[]
  Aanmeldingen Aanmelding[]

  @@index(deelgemeente)
  @@index(gemeente)
  @@index(provincieId)
  @@map("plaats")
}

model Project {
  id            Int          @id @default(autoincrement())
  projectnummer String       @unique @db.VarChar(256)
  type          ProjectType
  naam          String       @db.VarChar(256)
  activiteiten  Activiteit[]
  aanmeldingen  Aanmelding[]
  begeleiders   Persoon[]
  jaar          Int

  // Cursus
  organisatieonderdeel Organisatieonderdeel?

  // Vakantie
  prijs     Decimal?         @db.Money
  voorschot Decimal?         @db.Money
  seizoen   VakantieSeizoen?

  @@map("project")
}

model Aanmelding {
  id                         Int               @id @default(autoincrement())
  projectId                  Int
  project                    Project           @relation(fields: [projectId], references: [id])
  deelnemerId                Int?
  deelnemer                  Persoon?          @relation(fields: [deelnemerId], references: [id])
  deelnames                  Deelname[]
  woonplaatsDeelnemerId      Int
  woonplaatsDeelnemer        Plaats            @relation(fields: [woonplaatsDeelnemerId], references: [id])
  rekeninguittrekselNummer   String?           @db.VarChar(32)
  opmerking                  String?           @db.VarChar(1024)
  tijdstipVanAanmelden       DateTime          @default(now())
  status                     Aanmeldingsstatus @default(Aangemeld)
  toestemmingFotos           Boolean           @default(false)
  eersteCursusAanmeldingen   Persoon[]         @relation("eersteCursusAanmelding")
  eersteVakantieAanmeldingen Persoon[]         @relation("eersteVakantieAanmelding")

  @@unique([projectId, deelnemerId])
  @@map("aanmelding")
}

model Activiteit {
  id              Int        @id @default(autoincrement())
  project         Project    @relation(fields: [projectId], references: [id])
  projectId       Int
  van             DateTime
  totEnMet        DateTime
  vormingsuren    Float?
  metOvernachting Boolean    @default(false)
  deelnames       Deelname[]

  // Vakanties
  verblijf VakantieVerblijf?
  vervoer  VakantieVervoer?

  @@map("activiteit")
}

model Deelname {
  id                         Int        @id @default(autoincrement())
  aanmelding                 Aanmelding @relation(fields: [aanmeldingId], references: [id], onDelete: Cascade)
  aanmeldingId               Int
  activiteit                 Activiteit @relation(fields: [activiteitId], references: [id], onDelete: Cascade)
  activiteitId               Int
  effectieveDeelnamePerunage Float
  opmerking                  String?    @db.VarChar(512)

  @@unique([aanmeldingId, activiteitId])
  @@map("deelname")
}

model Organisatie {
  id        Int                  @id @default(autoincrement())
  naam      String               @unique @db.VarChar(256)
  website   String?              @db.VarChar(256)
  soorten   Organisatiesoort[]
  contacten OrganisatieContact[]

  @@map("organisatie")
}

model OrganisatieContact {
  id               Int              @id @default(autoincrement())
  organisatieId    Int
  terAttentieVan   String           @db.VarChar(256)
  afdeling         String?          @db.VarChar(256)
  doelgroepen      Doelgroep[]
  emailadres       String?          @db.VarChar(256)
  telefoonnummer   String?          @db.VarChar(256)
  adres            Adres?           @relation(fields: [adresId], references: [id])
  adresId          Int?
  opmerking        String?          @db.VarChar(1024)
  foldervoorkeuren Foldervoorkeur[]
  organisatie      Organisatie      @relation(fields: [organisatieId], references: [id])

  @@unique([organisatieId, terAttentieVan])
  @@map("organisatie_contact")
}

enum Aanmeldingsstatus {
  Aangemeld
  Bevestigd
  OpWachtlijst
  Geannuleerd
}

enum Organisatiesoort {
  AmbulanteWoonondersteuning
  ResidentieleWoonondersteuningMinderjarigen
  ResidentieleWoonondersteuningMeerderjarigen
  Pleegzorg
  RechtstreeksToegankelijkeHulp
  BijzondereJeugdzorg
  Psychiatrie
  Maatwerkbedrijf
  Dagwerking
  BegeleidWerkOfVrijwilligerswerk
  ArbeidstrajectBegeleiding
  Arbeidszorg
  BuSO
  CLB
  CentraBasiseducatie
  CAW
  JAC
  OCMW
  GGZ
  Justitiehuizen
  OndersteuningTrajectbegeleiding
  Vrijetijdsaanbod
  Algemeen
  Jeugdorganisatie
  Jeugddienst
  SociaalCultureleOrganisaties
  SteunpuntenEnFederaties
  Anders

  @@map("organisatiesoort")
}

model Foldervoorkeur {
  id                   Int                  @id @default(autoincrement())
  communicatie         Communicatievoorkeur
  folder               Foldersoort
  organisatieContactId Int?
  persoonId            Int?
  organisatieContact   OrganisatieContact?  @relation(fields: [organisatieContactId], references: [id])
  persoon              Persoon?             @relation(fields: [persoonId], references: [id])

  @@unique([folder, persoonId])
  @@unique([folder, organisatieContactId])
  @@index([folder])
  @@map("foldervoorkeur")
}

enum Communicatievoorkeur {
  post
  email
  postEnEmail

  @@map("communicatie_voorkeur")
}

enum Foldersoort {
  deKeiCursussen
  deKeiZomervakanties
  deKeiWintervakanties
  keiJongNietBuso
  keiJongBuso

  @@map("foldersoort")
}

enum ProjectType {
  cursus
  vakantie

  @@map("project_type")
}

enum OverigPersoonSelectie {
  algemeneVergaderingDeBedding
  algemeneVergaderingDeKei
  algemeneVergaderingKeiJong
  raadVanBestuurDeKei
  raadVanBestuurKeiJong
  personeel
  vakantieVrijwilliger

  @@map("overig_persoon_selectie")
}

enum Organisatieonderdeel {
  keiJongBuSO
  keiJongNietBuSO
  deKei

  @@map("organisatieonderdeel")
}

enum PersoonType {
  deelnemer
  overigPersoon

  @@map("persoon_type")
}

enum Geslacht {
  onbekend
  man
  vrouw

  @@map("geslacht")
}

enum Woonsituatie {
  onbekend
  thuisZonderProfessioneleBegeleiding
  thuisMetProfessioneleBegeleiding
  residentieleWoonondersteuning
  zelfstandigZonderProfessioneleBegeleiding
  zelfstandigMetProfessioneleBegeleiding

  @@map("woonsituatie")
}

enum Opleidingsvorm {
  onbekend
  opleidingsvorm1
  opleidingsvorm2
  opleidingsvorm3
  alternerendeBeroepsopleiding
  regulierOnderwijsMetExtraOndersteuning

  @@map("opleidingsvorm")
}

enum Werksituatie {
  onbekend
  school
  dagbesteding
  vrijwilligerswerk
  maatwerkbedrijf
  arbeidszorg
  arbeidstrajectbegeleiding
  reguliereArbeidscircuit
  pensioen
  werkzoekend

  @@map("werksituatie")
}

enum Voedingswens {
  geen
  vegetarisch
  halal
  andere

  @@map("voedingswens")
}

enum Doelgroep {
  deKei
  keiJong

  @@map("doelgroep")
}

enum VakantieVerblijf {
  hotelOfPension
  vakantiehuis
  boot

  @@map("vakantie_verblijf")
}

enum VakantieVervoer {
  vliegtuig
  autocarNacht
  autocarOverdag
  trein
  minibus
  boot

  @@map("vakantie_vervoer")
}

enum VakantieSeizoen {
  zomer
  winter

  @@map("vakantie_seizoen")
}
