erDiagram
  Deelnemer ||--O{ Inschrijving: schrijft-in
  Cursuslocatie ||--|| Adres: bevind-zich-in
  Adres }O--|| Provincie: bevindt-zich-in
  Cursus ||--O{ Inschrijving: heeft
  Cursus }O--O| Cursuslocatie: "vindt plaats op"
  Cursus |O--|| Project: "is een"
  Vakantie |O--|| Project: "is een"
  Project ||--|{ Activiteit: "bestaat uit"
  Deelnemer ||--O| IndividueleFiche: heeft
  Deelnemer |O--O| Organisatie: begeleidende-dienst
  Deelnemer |O--|| FolderVoorkeur: voorkeur
  Persoon ||--|| Adres: "verblijft in"
  Persoon ||--|| Adres: "is gedomicilieerd"
  Organisatie |O--|| FolderVoorkeur: voorkeur
  Organisatie |O--|| Adres: bevind-zich-in
  Deelnemer ||--O| Contactpersoon: heeft
  Deelnemer |O--|| Persoon: "is een"
  ExtraPersoon |O--|| Persoon: "is een"
  Deelnemer ||--O{ Deelname: ""
  Activiteit ||--O{ Deelname: "Heeft"
  OverigPersoon |O--|| Persoon: "is een"
  Organisatie }O--O{ Aanbod: "heeft"
  OverigPersoon }O--O{ Project: "begeleid"

  IndividueleFiche {
    boolean medicatie
    tekst medicatieOpmerking
    tekst alcoholgebruik
    tekst omgaanMetGeld
    tekst hygiene
    tekst vervoersmogelijkheden
    tekst vakantieErvaringen
    tekst cursusErvaringen
    boolean migratieachtergrond
    tekst migratieachtergrondOpmerking
    boolean armoedeAchtergrond
    tekst financieleBijzonderheden
    tekst verbaalVermogen
    tekst inzichtVermogen
    tekst orienterendVermogen
    tekst socialeVaardigheden
    tekst zwemmen
    tekst kloklezen
    tekst lezenEnSchrijven
    tekst praktischVermogen
    tekst opmerking
    boolean gerechterlijkToezicht
    boolean gerechterlijkToelichting
    tekst extraAandachtVoor
  }

  ExtraPersoon {
    tekst naam
    tekst TAV
    tekst opmerking
  }

  Adres {
    tekst straat
    tekst nummer
    tekst bus
    tekst gemeente
    tekst postcode
    tekst plaats
  }

  Provincie {
    tekst naam
  }

  Inschrijving {
    datumtijd tijdstip
    datumtijd bevestigingsTijdstip
    datumtijd vervoersbriefTijdstip
    tekst uittrekselnummers
    boolean wachtlijst
  }

  Deelname {
    nummer effectieveDeelnamePerunage
    boolean annulatie
  }

  Cursuslocatie {
    tekst naam
  }

  Organisatie {
    tekst naam
    tekst terAttentieVan
    tekst emailadres
    tekst opmerking
    tekst doelgroep
    tekst website
    enum  soort
  }

  Aanbod {
    tekst categorie
    tekst naam
  }

  FolderVoorkeur {
    boolean deKei
    boolean keiJongNietBuso
    boolean keiJongBuso
    boolean zomervakantie
    boolean wintervakantie
    boolean andereFolders
  }

  Contactpersoon {
  }
  
  Deelnemer {
    enum woonsituatie
    tekst woonsituatieOpmerking
    enum werksituatie
    tekst werksituatieOpmerking
    enum voedingswens
    boolean toestemmingFotos
    tekst voedingswensOpmerking
  }

  Cursus {
  }

  Project {
    tekst projectnummer
    tekst naam
    enum organisatieonderdeel
    enum soort
    boolean overnachting
  }

  Vakantie {
    tekst vakantienummer
    tekst bestemming
    nummer jaar
    enum seizoen
    enum land
    nummer prijs
    nummer voorschotOpSaldo
    nummer saldo
    enum verblijf
    enum vervoer
  }

  Activiteit {
    datumtijd van
    datumtijd tot    
    nummer vormingsuren
  }


  OverigPersoon {
    tekst opmerking
    boolean begeleidtVakanties
    boolean begeleidtCursus
    enum communicatie
    enum selectie
  }

  Persoon {
    tekst voornaam
    tekst achternaam
    tekst emailadres
    datum geboortedatum
    tekst geboorteplaats
    enum geslacht
    tekst rijksregisternummer
    tekst telefoonnummer
    tekst gsmNummer
    enum communicatievoorkeur
  }
